# Ongaku

./: .gitignore  Earthfile  README.md
backend/: .gitignore  Earthfile  pyproject.toml
backend/backend/api/: app.py
backend/backend/api/dependencies/: player.py  room.py
backend/backend/api/handlers/: room.py
backend/backend/api/models/: player.py  room.py
backend/backend/api/routes/: game.py  player.py  room.py
backend/backend/common/: member.py  message.py  message_dtos.py  player.py  room.py  turn.py  websocket_handler.py
backend/backend/errors/: room.py
ui/: Earthfile  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
ui/src/_components/: CategoryPicker.svelte  CollapsingMenu.svelte  Game.svelte  GameChat.svelte  GenreCard.svelte  PlayerAvatar.svelte  PlayersScoreboard.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/play/solo/: +layout.svelte  +page.svelte
